--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(server)
 
 target_sources(server PRIVATE
     server.cc
-    mem_reset.cc
+    ${PROJECT_SOURCE_DIR}/common/mem_reset.cc
     logic_unit.cc
     io_handler.cc
     broadcast_message.cc
