--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -3,6 +3,10 @@ add_executable(client)
 target_sources(client PRIVATE
     client.cc
     ${PROJECT_SOURCE_DIR}/common/mem_reset.cc
+    log_in.cc
+    log_out.cc
+    message_handler.cc
+    username_input.cc
 )
 
 target_include_directories(client PRIVATE ${PROJECT_SOURCE_DIR}/include/client)
