--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -2,7 +2,6 @@ add_executable(client)
 
 target_sources(client PRIVATE
     client.cc
-    ${PROJECT_SOURCE_DIR}/common/mem_reset.cc
     log_in.cc
     log_out.cc
     message_handler.cc
@@ -10,3 +9,4 @@ target_sources(client PRIVATE
 )
 
 target_include_directories(client PRIVATE ${PROJECT_SOURCE_DIR}/include/client)
+target_include_directories(client PRIVATE ${PROJECT_SOURCE_DIR}/common)
